make site a bit more extendet

--- a/about.html
+++ b/about.html
@@ -27,28 +27,7 @@
 
     <div class="container">
       <section id="main_content">
-      
-      <table>
-<tr>
-  <td>Projectname</td>
-  <td>Source</td>
-  <td>Docs</td>		
-  <td>Stability</td>
-  </tr>
-<tr>
-  <td><a href="tryToxic.html">tryToxic</a></td>
-  <td><a href="https://github.com/skamster/tryToxics/">Github</a></td>
-  <td><a href="tryToxicDocs/">Doc</a></td>		
-  <td>Should basicly work</td>
-</tr>
-<tr>
-  <td><a href="jobManagement.html">jobManagement (off)</a></td>
-  <td><a href="https://github.com/skamster/jobManagement/">Github</a></td>		
-  <td>----</td>
-  <td>Untested, but basicly stable</td>
-</tr>
-</table>
-</section>
+        <h3> aiaiai, its e my, mario!! </h3> </section>
     </div>
 
     
