update index.html, add one project

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <h1>Welcome to skamster.github.io</h1>
 
             <section id="downloads">
-                <a href="https://github.com/skamster" class="btn btn-github">
+                <a href="https://github.com/skamster" class="btn btn-github fade">
                     <span class="icon"></span>View on GitHub</a>
-                <a href="#" onclick="changeContent('index'); return false" class="btn">
+                <a href="#" onclick="changeContent('index'); return false" class="btn fade">
                     <span class="icon"></span>Home</a>
-                <a href="#" onclick="changeContent('about'); return false" class="btn">
+                <a href="#" onclick="changeContent('about'); return false" class="btn fade">
                     <span class="icon"></span>About me</a>
             </section>
         </div>
@@ -53,7 +53,21 @@
                     <a href="https://github.com/skamster/jobManagement/">README.md on Github</a>
                     <hr />
                     <p>
-                        This is a programm for temporary workers. It's specialiced for diffrent companys, so when u like to switch, it may could help you. The target is to watch the companys and how much money they give you (cause a company isn't trustable). The programm supports: * Companys * Jobs * Weekends * Month-over-jobs * Charges * Set it to inactive * Credits taken from the company, when you worked and wont wait to the end of the month.. * "Static charges" cause they normaly didn't change for a job (you just have it there or not) * loanSplits, means, what goes away, to gouverment, maybe holiday-money for you, or whatelse, but "notloan" * Multilangual (at the moment english and german) * Diffrent filtering options and Views * Overallview and Detailedview based on Companys * Calendarview * Livesearch [jobname, jobplace, jobleader, jobcomment, companyname] * Show inactive * SingleView (if you just use 1 company.. more limited) * Encryption by pycrypto (experimental, but should work, include changing of content</p>
+                        This is a programm for temporary workers. It's specialiced for diffrent companys, so when u like to switch, it may could help you. The target is to watch the companys and how much money they give you (cause a company isn't trustable). The programm supports:
+                        <ul>
+                            <li>Companys</li>
+                            <li>Jobs</li>
+                            <li>Weekends</li>
+                            <li>Month-over-jobs</li>
+                            <li>Charges</li>
+                            <li>Credits</li>
+                            <li>Diffrent filtering options and Views</li>
+                            <li>Overallview and Detailedview based on Companys</li>
+                            <li>Calendarview</li>
+                            <li>Livesearch [jobname, jobplace, jobleader, jobcomment, companyname]</li>
+                            <li>Encryption by pycrypto</li>
+                        </ul>
+                    </p>
                     <p>
                         <a href="https://raw.githubusercontent.com/skamster/jobManagement/master/screenshots/dataInit.png">
                             <img src="https://raw.githubusercontent.com/skamster/jobManagement/master/screenshots/dataInit.png">
@@ -70,7 +84,18 @@
                         </ul>
                     </p>
                 </section>
+                <section id="learncards-web" style="display:none">
 
+                    <h3>learnCards-Web</h3>
+                    <p>This PHP-application was based on v5.2 and continues with 5.9 now. Primary goal was one simple application, but it was used as base for many kinds of apps by myself. The name learncards is deprecated so long.
+                        <ul>
+                            <li>MVC-arch</li>
+                            <li>Dojo for JS</li>
+                            <li>Smarty for template</li>
+                            <li>Users with profiles and roles</li>
+                        </ul>
+                    </p>
+                </section>
                 <section id="tryToxic" style="display:none">
 
                     <h3>tryToxic</h3>For undeprecated information please consult
@@ -137,19 +162,43 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="#" onclick="changeContent('jobmanagement'); return false">jobManagement (off)</a>
+                                <a href="#" onclick="changeContent('jobmanagement'); return false">jobManagement</a>
                             </td>
                             <td>
                                 <a href="https://github.com/skamster/jobManagement/">Github</a>
                             </td>
-                            <td><a href="jobManagementDocs/index.html">Docs</a></a></td>
+                            <td>
+                                <a href="jobManagementDocs/index.html">Docs</a>
+                                </a>
+                            </td>
                             <td>Untested, but basicly stable</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="#" onclick="changeContent('learncards-web'); return false">learncards-web</a>
+                            </td>
+                            <td>
+                                <a href="https://github.com/skamster/learncards-web/">Github</a>
+                            </td>
+                            <td>No docs atm
+                            </td>
+                            <td>Experimental phase</td>
                         </tr>
                     </table>
 
                 </div>
                 <div id="about" style="display:none">
-                    <h3>about</h3>
+                    <h3>Little about me</h3>
+                    <ul>
+                        <li>hersche@vmail.me</li>
+                        <li>
+                            <a href="http://diasp.cz/u/skamster">skamster@diasp.cz</a>
+                        </li>
+                        <li>skamster@jabber.ccc.de (unoften used but with otr,pls use!)</li>
+                        <li>Soon a
+                            <a href="http://tox.im">tox</a>-id :)</li>
+
+                    </ul>
                 </div>
 
 
