short site to s for smaller urls.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         var lastName = ""
 
             function initSite() {
-                if (GET('site') != 'undefined') {
-                    lastName = GET('site');
+                if (GET('s') != 'undefined') {
+                    lastName = GET('s');
                     document.getElementById(lastName).style.display = "block";
                     document.getElementById('index').style.display = "none";
                 } else {
