--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </ul>
                     </p>
                 </section>
-                <section id="learncards-web" style="display:none">
+                <section id="peta" style="display:none">
 
                     <h3>Peta</h3>
                     <p>This PHP-application was based on v5.2 and continues with 5.9 now. Primary goal was one simple application, but it was used as base for many kinds of apps by myself. The name Peta came out of my idea called PHPMeta. This because the goal goes now in a very modular direction. The old name "learncards-web" is death!</p>
@@ -205,7 +205,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="#" onclick="changeContent('learncards-web'); return false">Peta</a>
+                                <a href="#" onclick="changeContent('peta'); return false">Peta</a>
                             </td>
                             <td>
                                 <a href="https://github.com/skamster/Peta/">Github</a>
